@@ -28,8 +28,7 @@ the installation.
 
 Via serial console: Using a null modem cable, you can connect to the serial
 port of your Cobalt machine (using 115200 bps) and perform the installation
-this way.  This option is not available on Qube 2700 (Qube1) machines since
-they have no serial port.
+this way.
 
 </para></listitem>
 </itemizedlist>
