@@ -11,8 +11,7 @@ Debian on &arch-title; supports the following platforms:
 <listitem><para>
 
 Cobalt Microserver: only MIPS based Cobalt machines are covered here.  This
-includes the Cobalt Qube 2700 (Qube1), RaQ, Qube2 and RaQ2, and the Gateway
-Microserver.
+includes the Cobalt RaQ, Qube2 and RaQ2, and the Gateway Microserver.
 
 </para></listitem>
 <listitem><para>
@@ -48,7 +47,8 @@ debian-&arch-listname; mailing list</ulink>.
 
 <para>
 
-All MIPS based Cobalt machines are supported.
+All MIPS based Cobalt machines are supported with the exception of the
+Qube 2700 (Qube 1).
 
 </para><para>
 
