@@ -17,6 +17,7 @@ installation-guide (2009xxxx) UNRELEASED; urgency=low
     - Add a section about Marvell's Kirkwood, which is now supported.
   * Updates for MIPS:
     - Show some sections on mipsel that apply there too.
+    - Say that the Cobalt Qube 2700 (Qube1) is no longer supported.
 
  -- Frans Pop <fjp@debian.org>  Tue, 28 Apr 2009 18:13:46 +0200
 
